# geocode-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-a92c982b0611286a5ed3bc999ce80e04b552f50aff2b39efdf6569b7359ad39d.json  query-c38414ecaf83932e52f194b85f858d97f43761f3fb590cebbe51d6634e18e6d9.json
src/: error.rs  geocode.rs  main.rs  options.rs
