[package]
name = "geocode-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
csv = "1.3.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
optfield = "0.3.0"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.115"
simple_logger = { version = "4.3.3", features = ["threads"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
